[package]
name = "lookuptest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13"
group = "0.13"
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", features = ["dev-graph"]}
pasta_curves = "0.5.0"
plotters = { version = "0.3.0" }
